--- a/lead-management/.env
+++ b/lead-management/.env
@@ -1,2 +1,2 @@
-# VITE_BACKEND_URL=http://localhost:5000/api
-VITE_BACKEND_URL=https://thecarboys.vercel.app/api
+VITE_BACKEND_URL=http://localhost:5000/api
+# VITE_BACKEND_URL=https://thecarboys.vercel.app/api
