--- a/lead-management/package.json
+++ b/lead-management/package.json
@@ -15,7 +15,9 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@types/chart.js": "^2.9.41",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "lodash": "^4.17.21",
@@ -23,6 +25,7 @@
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.28.0",
