feat : Total leads added and createdBy

--- a/lead-management/.env
+++ b/lead-management/.env
@@ -1,2 +1,3 @@
-# VITE_BACKEND_URL=http://localhost:5000/api
-VITE_BACKEND_URL=https://thecarboys.vercel.app/api
+# VITE_BACKEND_URL=http://localhost:5050/api
+# VITE_BACKEND_URL=https://thecarboys.vercel.app/api
+VITE_BACKEND_URL=http://15.156.176.234:5050/api
