--- a/lead-management/package.json
+++ b/lead-management/package.json
@@ -22,10 +22,13 @@
     "flowbite-react": "^0.10.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
+    "mobx-react": "^9.2.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-router-dom": "^6.28.0",
