--- a/lead-management/package.json
+++ b/lead-management/package.json
@@ -22,6 +22,7 @@
     "flowbite-react": "^0.10.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.460.0",
+    "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.4",
